# SimuForge-Stone

./: .gitignore  Cargo.toml  GUI_DESIGN_PLAN.md  PLAN.md  README.md  config.toml  quick_commands.txt
.claude/commands/: amnesia.md
ai_notes/: 2026-02-26_meshing_performance_plan.md  2026-02-26_multi_stage_toolpath.md  2026-02-27_floating_material_bug_SOLVED.md  2026-02-28_application_expansion_ideas.md  2026-02-28_competitive_landscape.md  2026-02-28_rust_gpu_roadmap.md  2026-02-28_simuverse_strategy.md
crates/audio/: Cargo.toml
crates/audio/src/: lib.rs  spatial.rs  synth.rs
crates/carver/: Cargo.toml
crates/carver/src/: lib.rs  main.rs
crates/control/: Cargo.toml
crates/control/src/: carving.rs  gcode.rs  ik.rs  lib.rs  stl.rs  toolpath.rs  trajectory.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/cutting/: Cargo.toml
crates/cutting/src/: forces.rs  lib.rs  tool.rs
crates/material/: Cargo.toml
crates/material/src/: async_mesher.rs  lib.rs  mesher.rs  octree.rs  redistance.rs  sdf_ops.rs
crates/motors/: Cargo.toml
crates/motors/src/: gearbox.rs  lib.rs  pid.rs  servo.rs  stepper.rs
crates/physics/: Cargo.toml
crates/physics/src/: aba.rs  arm.rs  joint.rs  lib.rs  spatial.rs
crates/pingpong/: Cargo.toml
crates/pingpong/src/: ai.rs  arm_config.rs  ball.rs  collision.rs  config.rs  game.rs  hud.rs  main.rs  table.rs
crates/render/: Cargo.toml
crates/render/src/: arm_visual.rs  camera.rs  context.rs  lib.rs  mesh.rs
crates/render/src/pipelines/: composite.rs  line.rs  mod.rs  overlay.rs  pbr.rs  shadow.rs  ssao.rs  sss.rs
crates/render/src/shaders/: composite.wgsl  line.wgsl  overlay.wgsl  pbr.wgsl  shadow.wgsl  ssao.wgsl  sss.wgsl
crates/sim/: Cargo.toml
crates/sim/src/: config.rs  main.rs  ui.rs
examples/: calibration.gcode  corner_bevel.gcode  test_carve.gcode
refs/: claude_research_thoughts  initial_chat_with_claude
tools/stl_to_gcode/: stl_to_gcode.py
