[package]
name = "simuforge-pingpong"
version = "0.1.0"
edition = "2021"

[dependencies]
simuforge-core = { path = "../core" }
simuforge-physics = { path = "../physics" }
simuforge-motors = { path = "../motors" }
simuforge-control = { path = "../control" }
simuforge-render = { path = "../render" }
simuforge-audio = { path = "../audio" }
nalgebra = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = "0.4"
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
